implementato zone e preset, ota
